03-Terraform-Settings-Providers-Resources/terraform-manifests/vpc.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.default.id

  tags = {
    Name = "IGW"
    "hmkim" = "igw"
  }
}

resource "aws_security_group" "webserver-sg" {
    name = "webserver-sg"
    description = "allow 22, 80"
    vpc_id = aws_vpc.default.id
}

resource "aws_security_group_rule" "webserver-sg-ssh" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
    security_group_id = aws_security_group.webserver-sg.id
    description = "ssh"
}

resource "aws_security_group_rule" "webserver-sg-http" {
    type = "ingress"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
    security_group_id = aws_security_group.webserver-sg.id
    description = "http"
}
